added something new

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>my second github repo</title>
 </head>
 <body>
-    
+    <h1>something new is cooking</h1>
+    <h2>so take me in your prayer</h2>
+    <P>its meeeeee, tithi</P>
+    <p>welcome to my world</p>
 </body>
 </html>
