--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <style>
+        h1{
+            color:brown;
+        }
+        h2{
+            color:blue;
+        }
+        p{
+            color:chartreuse;
+        }
+    </style>
 </head>
 <body>
     <h1>something new is cooking</h1>
