added something new

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         p{
             color:chartreuse;
         }
+        b{
+            color:navy;
+        }
+        
     </style>
 </head>
 <body>
     <h1>something new is cooking</h1>
     <h2>so take me in your prayer</h2>
-    <P>its meeeeee, tithi</P>
+    <P>its meeeeee,<b>tithi</b></P>
     <p>welcome to my world</p>
 </body>
 </html>
