--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <h2>so take me in your prayer</h2>
     <P>its meeeeee,<b>tithi</b></P>
     <p>welcome to my world</p>
-    <a href="c:\Users\DELL\Downloads\357219363_1433481563886248_6499836454436043790_n.jpg"></a>
+    <img src="<a href="c:\Users\DELL\Downloads\357219363_1433481563886248_6499836454436043790_n.jpg"></a>"
 </body>
 </html>
