--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         b{
             color:navy;
         }
-        
-    </style>
+        </style>
 </head>
 <body>
     <h1>something new is cooking</h1>
     <h2>so take me in your prayer</h2>
     <P>its meeeeee,<b>tithi</b></P>
     <p>welcome to my world</p>
-    <img src="<a href="c:\Users\DELL\Downloads\357219363_1433481563886248_6499836454436043790_n.jpg"></a>"
+    <img src="c:\Users\DELL\Downloads\357219363_1433481563886248_6499836454436043790_n.jpg"
 </body>
 </html>
