--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <h2>so take me in your prayer</h2>
     <P>its meeeeee,<b>tithi</b></P>
     <p>welcome to my world</p>
-    <img src="c:\Users\DELL\Downloads\357219363_1433481563886248_6499836454436043790_n.jpg"
+    <img src="./357219363_1433481563886248_6499836454436043790_n.jpg"/>
 </body>
 </html>
